feat: make progress on asgmt 2

--- a/tutorials/cnn_example.ipynb
+++ b/tutorials/cnn_example.ipynb
@@ -2,25 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torchvision\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import torch.nn as nn\n",
-    "from torchvision.transforms import transforms\n",
-    "import torch.nn.functional as F"
+    "import torchvision\n",
+    "from torchvision.transforms import transforms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -38,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -47,10 +43,31 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0.0%"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files already downloaded and verified\n",
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data/cifar-10-python.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/cifar-10-python.tar.gz to ./data\n",
       "Files already downloaded and verified\n",
       "1563\n",
       "313\n"
@@ -59,32 +76,34 @@
    ],
    "source": [
     "# Use transforms.compose method to reformat images for modeling, we are getting a normalization from a range 0 to 1 to -1 to 1\n",
-    "all_transforms = transforms.Compose([transforms.Resize((32,32)),\n",
-    "                                     transforms.ToTensor(),\n",
-    "                                     transforms.Normalize(mean=[0.4914, 0.4822, 0.4465],\n",
-    "                                                          std=[0.247, 0.243, 0.261])\n",
-    "                                     ])\n",
+    "all_transforms = transforms.Compose(\n",
+    "    [\n",
+    "        transforms.Resize((32, 32)),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(\n",
+    "            mean=[0.4914, 0.4822, 0.4465], std=[0.247, 0.243, 0.261]\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
     "# Create Training dataset\n",
-    "train_dataset = torchvision.datasets.CIFAR10(root = './data',\n",
-    "                                             train = True,\n",
-    "                                             transform = all_transforms,\n",
-    "                                             download = True)\n",
+    "train_dataset = torchvision.datasets.CIFAR10(\n",
+    "    root=\"./data\", train=True, transform=all_transforms, download=True\n",
+    ")\n",
     "\n",
     "# Create Testing dataset\n",
-    "test_dataset = torchvision.datasets.CIFAR10(root = './data',\n",
-    "                                            train = False,\n",
-    "                                            transform = all_transforms,\n",
-    "                                            download=True)\n",
+    "test_dataset = torchvision.datasets.CIFAR10(\n",
+    "    root=\"./data\", train=False, transform=all_transforms, download=True\n",
+    ")\n",
     "\n",
     "# Create loader objects to facilitate processing\n",
-    "train_loader = torch.utils.data.DataLoader(dataset = train_dataset,\n",
-    "                                           batch_size = batch_size,\n",
-    "                                           shuffle = True)\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "    dataset=train_dataset, batch_size=batch_size, shuffle=True\n",
+    ")\n",
     "\n",
     "\n",
-    "test_loader = torch.utils.data.DataLoader(dataset = test_dataset,\n",
-    "                                          batch_size = batch_size,\n",
-    "                                          shuffle = True)\n",
+    "test_loader = torch.utils.data.DataLoader(\n",
+    "    dataset=test_dataset, batch_size=batch_size, shuffle=True\n",
+    ")\n",
     "\n",
     "# check number of train/test data\n",
     "print(len(train_loader))\n",
@@ -93,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -118,10 +137,10 @@
     "dataiter = iter(train_loader)\n",
     "images, labels = dataiter.next()\n",
     "\n",
-    "conv1 = nn.Conv2d(3,6,5)\n",
-    "pool = nn.MaxPool2d(2,2)\n",
-    "conv2 = nn.Conv2d(6,16,5)\n",
-    "conv3 = nn.Conv2d(16,32,5)\n",
+    "conv1 = nn.Conv2d(3, 6, 5)\n",
+    "pool = nn.MaxPool2d(2, 2)\n",
+    "conv2 = nn.Conv2d(6, 16, 5)\n",
+    "conv3 = nn.Conv2d(16, 32, 5)\n",
     "print(images.shape)\n",
     "trials = conv1(images)\n",
     "print(trials.shape)\n",
@@ -130,12 +149,12 @@
     "trials = conv2(trials)\n",
     "print(trials.shape)\n",
     "trials = pool(trials)\n",
-    "print(trials.shape)\n"
+    "print(trials.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -149,11 +168,13 @@
     "    #  Determine what layers and their order in CNN object\n",
     "    def __init__(self, num_classes):\n",
     "        super().__init__()\n",
-    "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=6, kernel_size=5) #Size of kernels, i. e. of size 5x5\n",
-    "        self.pool = nn.MaxPool2d(kernel_size = 2, stride = 2)\n",
+    "        self.conv1 = nn.Conv2d(\n",
+    "            in_channels=3, out_channels=6, kernel_size=5\n",
+    "        )  # Size of kernels, i. e. of size 5x5\n",
+    "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "        self.conv2 = nn.Conv2d(in_channels=6, out_channels=16, kernel_size=5)\n",
     "\n",
-    "        self.fc1 = nn.Linear(400, 128) #400 = 16 *5 *5\n",
+    "        self.fc1 = nn.Linear(400, 128)  # 400 = 16 *5 *5\n",
     "        self.relu = nn.ReLU()\n",
     "        self.fc2 = nn.Linear(128, num_classes)\n",
     "\n",
@@ -174,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -185,14 +206,17 @@
    "source": [
     "model = MyCNN(num_classes)\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate, weight_decay = 0.005, momentum = 0.9)"
+    "optimizer = torch.optim.SGD(\n",
+    "    model.parameters(), lr=learning_rate, weight_decay=0.005, momentum=0.9\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
+    "lines_to_next_cell": 2,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -202,23 +226,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1/2, step 500/1563, loss = 1.246656\n",
-      "epoch 1/2, step 1000/1563, loss = 1.183096\n",
-      "epoch 1/2, step 1500/1563, loss = 1.164169\n",
-      "Epoch [1/2], Loss: 1.3002\n",
-      "epoch 2/2, step 500/1563, loss = 1.468731\n",
-      "epoch 2/2, step 1000/1563, loss = 1.076961\n",
-      "epoch 2/2, step 1500/1563, loss = 1.209260\n",
-      "Epoch [2/2], Loss: 1.0453\n"
+      "epoch 1/2, step 500/1563, loss = 2.170907\n",
+      "epoch 1/2, step 1000/1563, loss = 2.229822\n",
+      "epoch 1/2, step 1500/1563, loss = 1.983400\n",
+      "Epoch [1/2], Loss: 1.9357\n",
+      "epoch 2/2, step 500/1563, loss = 1.482014\n",
+      "epoch 2/2, step 1000/1563, loss = 1.708918\n",
+      "epoch 2/2, step 1500/1563, loss = 1.374065\n",
+      "Epoch [2/2], Loss: 1.3854\n"
      ]
     }
    ],
    "source": [
-    "#training\n",
+    "# training\n",
     "n_total_steps = len(train_loader)\n",
     "\n",
     "for epoch in range(num_epochs):\n",
-    "    #Load in the data in batches using the train_loader object\n",
+    "    # Load in the data in batches using the train_loader object\n",
     "    for i, (images, labels) in enumerate(train_loader):\n",
     "        # Forward pass\n",
     "        outputs = model(images)\n",
@@ -228,17 +252,21 @@
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        if (i+1) % 500 == 0:\n",
-    "            print(f'epoch {epoch+1}/{num_epochs}, step {i+1}/{n_total_steps}, loss = {loss.item():4f}')\n",
+    "        if (i + 1) % 500 == 0:\n",
+    "            print(\n",
+    "                f\"epoch {epoch+1}/{num_epochs}, step {i+1}/{n_total_steps}, loss = {loss.item():4f}\"\n",
+    "            )\n",
     "\n",
-    "    print('Epoch [{}/{}], Loss: {:.4f}'.format(epoch+1, num_epochs, loss.item()))\n",
-    "\n",
-    "\n"
+    "    print(\n",
+    "        \"Epoch [{}/{}], Loss: {:.4f}\".format(\n",
+    "            epoch + 1, num_epochs, loss.item()\n",
+    "        )\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -250,8 +278,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the 313 test images: 56.4 %\n",
-      "Accuracy of the network on the 1563 train images: 57.833333333333336 %\n"
+      "Accuracy of the network on the 313 test images: 45.58 %\n",
+      "Accuracy of the network on the 1563 train images: 45.56333333333333 %\n"
      ]
     }
    ],
@@ -265,7 +293,11 @@
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
-    "    print('Accuracy of the network on the {} test images: {} %'.format(len(test_loader), 100 * correct / total))\n",
+    "    print(\n",
+    "        \"Accuracy of the network on the {} test images: {} %\".format(\n",
+    "            len(test_loader), 100 * correct / total\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "    for images, labels in train_loader:\n",
     "        outputs = model(images)\n",
@@ -273,20 +305,12 @@
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
     "\n",
-    "    print('Accuracy of the network on the {} train images: {} %'.format(len(train_loader), 100 * correct / total))\n"
+    "    print(\n",
+    "        \"Accuracy of the network on the {} train images: {} %\".format(\n",
+    "            len(train_loader), 100 * correct / total\n",
+    "        )\n",
+    "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -298,14 +322,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "3.10.0"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
