--- a/tutorials/cnn_example.ipynb
+++ b/tutorials/cnn_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -43,31 +43,10 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0.0%"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data/cifar-10-python.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./data/cifar-10-python.tar.gz to ./data\n",
+      "Files already downloaded and verified\n",
       "Files already downloaded and verified\n",
       "1563\n",
       "313\n"
@@ -80,9 +59,7 @@
     "    [\n",
     "        transforms.Resize((32, 32)),\n",
     "        transforms.ToTensor(),\n",
-    "        transforms.Normalize(\n",
-    "            mean=[0.4914, 0.4822, 0.4465], std=[0.247, 0.243, 0.261]\n",
-    "        ),\n",
+    "        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
     "    ]\n",
     ")\n",
     "# Create Training dataset\n",
@@ -112,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -140,7 +117,6 @@
     "conv1 = nn.Conv2d(3, 6, 5)\n",
     "pool = nn.MaxPool2d(2, 2)\n",
     "conv2 = nn.Conv2d(6, 16, 5)\n",
-    "conv3 = nn.Conv2d(16, 32, 5)\n",
     "print(images.shape)\n",
     "trials = conv1(images)\n",
     "print(trials.shape)\n",
@@ -154,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -195,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -213,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "lines_to_next_cell": 2,
@@ -226,14 +202,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1/2, step 500/1563, loss = 2.170907\n",
-      "epoch 1/2, step 1000/1563, loss = 2.229822\n",
-      "epoch 1/2, step 1500/1563, loss = 1.983400\n",
-      "Epoch [1/2], Loss: 1.9357\n",
-      "epoch 2/2, step 500/1563, loss = 1.482014\n",
-      "epoch 2/2, step 1000/1563, loss = 1.708918\n",
-      "epoch 2/2, step 1500/1563, loss = 1.374065\n",
-      "Epoch [2/2], Loss: 1.3854\n"
+      "epoch 1/2, step 500/1563, loss = 1.880617\n",
+      "epoch 1/2, step 1000/1563, loss = 1.582625\n",
+      "epoch 1/2, step 1500/1563, loss = 1.947143\n",
+      "Epoch [1/2], Loss: 1.1342\n",
+      "epoch 2/2, step 500/1563, loss = 1.695499\n",
+      "epoch 2/2, step 1000/1563, loss = 1.596449\n",
+      "epoch 2/2, step 1500/1563, loss = 1.710818\n",
+      "Epoch [2/2], Loss: 1.3425\n"
      ]
     }
    ],
@@ -266,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -278,8 +254,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the network on the 313 test images: 45.58 %\n",
-      "Accuracy of the network on the 1563 train images: 45.56333333333333 %\n"
+      "Accuracy of the network on the 313 test images: 31.19 %\n",
+      "Accuracy of the network on the 1563 train images: 30.736666666666668 %\n"
      ]
     }
    ],
